--- a/about.html
+++ b/about.html
@@ -1,12 +1,8 @@
 ---
 layout: page
 title: About Me
-description: This is what I do.
+description: Discover my journey and passion for software development.
 background: '/img/bg-about.jpg'
 ---
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed quisquam ut perspiciatis, repudiandae nulla animi iste vel, praesentium repellendus molestias aliquid consequatur, earum rem qui error voluptates eius enim consequuntur!</p>
-
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex alias, earum consectetur quia natus ducimus voluptate explicabo, hic porro reprehenderit, quasi? Tenetur ipsum distinctio laboriosam perspiciatis officiis dolore, architecto id.</p>
-
-<p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam inventore aspernatur repellendus incidunt adipisci modi voluptates recusandae iste eligendi, repudiandae corporis quod aut, optio! Explicabo quaerat unde voluptatem! Itaque, eum!</p>
+<p class="about-me">Welcome! I am Laban Kibet, an enthusiastic software developer 🚀 from Nairobi, Kenya. My passion lies in creating innovative solutions 💡 and building products that elevate user experiences 🌟. As a full-stack developer specializing in backend development, DevOps, and AI integration, I am eager to embrace new challenges and opportunities in the tech world. Let’s connect and explore the possibilities together!</p>
