Refactor blog layout and styling for better readability

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: About Me
 description: Discover my journey and passion for software development.
-background: '/img/bg-about.jpg'
+background: '/img/bg_about.png'
 ---
 
-<p class="about-me">Welcome! I am Laban Kibet, an enthusiastic software developer 🚀 from Nairobi, Kenya. My passion lies in creating innovative solutions 💡 and building products that elevate user experiences 🌟. As a full-stack developer specializing in backend development, DevOps, and AI integration, I am eager to embrace new challenges and opportunities in the tech world. Let’s connect and explore the possibilities together!</p>
+<p class="about-me">Hello and welcome! I'm Laban Kibet, a passionate software developer 🚀 based in Nairobi, Kenya. With a deep interest in creating innovative solutions 💡, I focus on building seamless, impactful products that transform user experiences 🌟. My expertise spans backend development, DevOps, and AI integration, making me a versatile developer ready to tackle exciting challenges. Let’s connect and explore the world of technology together!</p>
