--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: About Me
-description: Discover my journey and passion for software development.
+description: 🌟💻
 background: '/img/bg_about.png'
 ---
 
